--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,13 +1,17 @@
 .cover__overlay {
+  background-image: url(../../../images/cover-trains.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 100%;
+  justify-content: center;
   text-decoration: none;
 }
 
-.cover__overlay::before {
+.cover__overlay::after {
   content: "";
   position: absolute;
   z-index: 1;
@@ -19,6 +23,18 @@
   opacity: 0.3;
 }
 
-.cover__overlay:hover::before {
+.cover__overlay:hover::after {
   opacity: 0.8;
+}
+
+@media screen and (min-width: 1280px) {
+  .cover__overlay {
+    min-height: 740px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .cover__overlay {
+    min-height: calc(100vw * 740 / 1280);
+  }
 }
