--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,57 +1,17 @@
 .cover__title {
   z-index: 2;
   max-width: 560px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-size: 72px;
   font-weight: 900;
   line-height: 76px;
   text-align: center;
   color: #ffffff;
-  margin: 245px 0 32px;
-}
-
-@media screen and (max-width: 1024px) {
-  .cover__title {
-    z-index: 2;
-    max-width: 560px;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
-    font-size: 72px;
-    font-weight: 900;
-    line-height: 76px;
-    text-align: center;
-    color: #ffffff;
-    margin: 195px 0 32px;
-  }
+  margin: 0 0 32px;
 }
 
 @media screen and (max-width: 768px) {
   .cover__title {
-    z-index: 2;
-    max-width: 560px;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
-    font-size: 72px;
-    font-weight: 900;
-    line-height: 76px;
-    text-align: center;
-    color: #ffffff;
-    margin: 115px 0 32px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .cover__title {
-    z-index: 2;
-    max-width: 251px;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
-    font-size: 32px;
-    font-weight: 900;
-    line-height: 35px;
-    text-align: center;
-    color: #ffffff;
-    margin: 33px 0 16px;
+    font-size: calc(32px + 40 * ((100vw - 320px) / (768 - 320)));
+    line-height: calc(35px + 41 * ((100vw - 320px) / (768 - 320)));
   }
 }
