--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,41 +4,24 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  gap: 20px;
   margin: 0 auto;
-  padding-bottom: 24px;
-}
-
-@media screen and (max-width: 1024px) {
-  .footer {
-    max-width: 928px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    padding-bottom: 24px;
-  }
+  padding: 0 48px 24px;
 }
 
 @media screen and (max-width: 768px) {
   .footer {
-    max-width: 720px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    padding-bottom: 24px;
+    padding: 0 calc(16px + 12 * ((100vw - 320px) / (768 - 320))) 24px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 510px) {
   .footer {
-    max-width: 288px;
     display: flex;
     justify-content: flex-start;
-    flex-direction: row;
-    align-items: center;
-    padding-bottom: 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0;
+    padding: 0 16px 24px;
   }
 }
