--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,4 @@
 .header__lang-link {
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-size: 24px;
   font-weight: 400;
   line-height: 28px;
@@ -9,21 +7,19 @@
 }
 
 .header__lang-link:hover {
-  text-decoration-line: underline;
+  border-bottom: 2px solid #ffffff;
+}
+
+@media screen and (max-width: 768px) {
+  .header__lang-link {
+    font-size: calc(18px + 6 * ((100vw - 320px) / (768 - 320)));
+    line-height: calc(20px + 8 * ((100vw - 320px) / (768 - 320)));
+  }
 }
 
 @media screen and (max-width: 320px) {
   .header__lang-link {
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
     font-size: 18px;
-    font-weight: 400;
     line-height: 20px;
-    color: #ffffff;
-    text-decoration: none;
-  }
-
-  .header__lang-link:hover {
-    text-decoration-line: underline;
   }
 }
