--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,36 +1,27 @@
 .intro__title {
   max-width: 690px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-size: 54px;
   font-weight: 900;
   line-height: 58px;
-  color: #ffffff;
   margin: 0 0 40px;
+}
+
+@media screen and (max-width: 1024px) {
+  .intro__title {
+    max-width: 720px;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .intro__title {
-    max-width: 720px;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
-    font-size: 54px;
-    font-weight: 900;
-    line-height: 58px;
-    color: #ffffff;
-    margin: 0 0 40px;
+    font-size: calc(32px + 22 * ((100vw - 320px) / (768 - 320)));
+    line-height: calc(35px + 23 * ((100vw - 320px) / (768 - 320)));
   }
 }
 
 @media screen and (max-width: 320px) {
   .intro__title {
-    max-width: 248px;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
     font-size: 32px;
-    font-weight: 900;
     line-height: 35px;
-    color: #ffffff;
-    margin: 0 0 40px;
   }
 }
