--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,19 +1,29 @@
 .intro {
+  max-width: 984px;
   margin: 0 auto 92px;
-  color: #ffffff;
+}
+
+@media screen and (max-width: 1280px) {
+  .intro {
+    max-width: calc(928px + (984 - 928) * ((100vw - 1024px) / (1280 - 1024)));
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    max-width: calc(720px + (928 - 720) * ((100vw - 768px) / (1024 - 768)));
+  }
 }
 
 @media screen and (max-width: 768px) {
   .intro {
+    max-width: calc(288px + (720 - 288) * ((100vw - 320px) / (768 - 320)));
     margin: 0 auto 88px;
-    color: #ffffff;
   }
 }
 
 @media screen and (max-width: 320px) {
   .intro {
-    max-width: 288px;
     margin: 0 auto 64px;
-    color: #ffffff;
   }
 }
