--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,5 @@
 .lead__caption {
   max-width: 100%;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-size: 10px;
   font-weight: 400;
   line-height: 14px;
@@ -10,30 +8,20 @@
   margin: 0;
 }
 
+@media screen and (max-width: 1024px) {
+  .lead__caption {
+    margin: 0 0 0 calc(24px - 24 * ((100vw - 768px) / (1024 - 768)));
+  }
+}
+
 @media screen and (max-width: 768px) {
   .lead__caption {
-    max-width: 100%;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 1.5px;
-    text-transform: uppercase;
-    margin: 0 0 0 24px;
+    margin: 0 0 0 calc(16px + 8 * ((100vw - 320px) / (768 - 320)));
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__caption {
-    max-width: 100%;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 1.5px;
-    text-transform: uppercase;
     margin: 0 0 0 16px;
   }
 }
