--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,8 +1,6 @@
 .lead__subtitle {
   max-width: 640px;
   margin: 0 auto 64px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-size: 30px;
   font-weight: 400;
   line-height: 36px;
@@ -11,26 +9,22 @@
 
 @media screen and (max-width: 1024px) {
   .lead__subtitle {
-    max-width: 640px;
     margin: 0 auto 56px;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 36px;
-    text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    width: calc(288px + 352 * ((100vw - 320px) / (768 - 320)));
+    font-size: calc(16px + 14 * ((100vw - 320px) / (768 - 320)));
+    line-height: calc(20px + 16 * ((100vw - 320px) / (768 - 320)));
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__subtitle {
-    max-width: 288px;
     margin: 0 auto 40px;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
     font-size: 16px;
-    font-weight: 400;
     line-height: 20px;
-    text-align: center;
   }
 }
