--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,29 +1,29 @@
 .lead {
   max-width: 984px;
   margin: 0 auto 92px;
-  color: #ffffff;
+}
+
+@media screen and (max-width: 1280px) {
+  .lead {
+    width: calc(928px + (984 - 928) * ((100vw - 1024px) / (1280 - 1024)));
+  }
 }
 
 @media screen and (max-width: 1024px) {
   .lead {
-    max-width: 928px;
-    margin: 0 auto 92px;
-    color: #ffffff;
+    max-width: calc(768px + (928 - 768) * ((100vw - 768px) / (1024 - 768)));
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead {
-    max-width: 768px;
+    max-width: 100%;
     margin: 0 auto 88px;
-    color: #ffffff;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead {
-    max-width: 320px;
     margin: 0 auto 64px;
-    color: #ffffff;
   }
 }
