--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,23 +6,24 @@
   gap: 16px 16px;
 }
 
+@media screen and (max-width: 1280px) {
+  .photo-grid {
+    max-width: calc(928px + (1184 - 928) * ((100vw - 1024px) / (1280 - 1024)));
+    gap: 14px 14px;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    max-width: 928px;
-    margin: 0 auto 92px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, max-content));
-    gap: 14px 14px;
+    max-width: calc(720px + (928 - 720) * ((100vw - 768px) / (1024 - 768)));
+    gap: 16px 16px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    max-width: 720px;
+    max-width: calc(288px + (720 - 288) * ((100vw - 320px) / (768 - 320)));
     margin: 0 auto 88px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(352px, max-content));
-    gap: 16px 16px;
   }
 }
 
@@ -30,8 +31,6 @@
   .photo-grid {
     max-width: 288px;
     margin: 0 auto 64px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(288px, max-content));
     gap: 12px;
   }
 }
