--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,28 +1,4 @@
 .place__image {
-  max-width: 460px;
+  max-width: 100%;
   object-fit: cover;
-}
-
-@media screen and (max-width: 1024px) {
-  .place__image {
-    max-width: 440px;
-    object-fit: cover;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .place__image {
-    max-width: 340px;
-    object-fit: cover;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .place__image {
-    position: relative;
-    left: -16px;
-    top: 0;
-    max-width: 320px;
-    object-fit: cover;
-  }
 }
