--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,11 +5,8 @@
   justify-content: flex-end;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 639px) {
   .place__website {
-    max-width: 288px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    padding: 0 calc(16px - 8 * ((100vw - 288px) / (639 - 288))) 0;
   }
 }
