--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,9 +1,8 @@
 .place {
   max-width: 984px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(460px, max-content));
+  grid-template-columns: repeat(auto-fit, minmax(40%, max-content));
   gap: 48px 40px;
-  color: #ffffff;
   margin-bottom: 80px;
 }
 
@@ -13,27 +12,14 @@
 
 @media screen and (max-width: 1024px) {
   .place {
-    max-width: 928px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(440px, max-content));
     gap: 48px 30px;
-    color: #ffffff;
-    margin-bottom: 80px;
-  }
-
-  .place:last-child {
-    margin-bottom: 92px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place {
-    max-width: 720px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(340px, max-content));
+    grid-template-columns: repeat(auto-fit, minmax(288px, max-content));
     gap: 48px 28px;
-    color: #ffffff;
-    margin-bottom: 80px;
   }
 
   .place:last-child {
@@ -43,11 +29,7 @@
 
 @media screen and (max-width: 320px) {
   .place {
-    max-width: 288px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(288px, max-content));
     gap: 32px;
-    color: #ffffff;
     margin-bottom: 50px;
   }
 
