--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,22 @@
 .places {
-  margin: 0 auto;
+  max-width: 984px;
+  margin: 0 auto 92px;
+}
+
+@media screen and (max-width: 1280px) {
+  .places {
+    max-width: calc(928px + (984 - 928) * ((100vw - 1024px) / (1280 - 1024)));
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .places {
+    max-width: calc(720px + (928 - 720) * ((100vw - 768px) / (1024 - 768)));
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    max-width: calc(288px + (720 - 288) * ((100vw - 288px) / (768 - 288)));
+  }
 }
