--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,15 +1,9 @@
 .root {
   max-width: 100%;
-  padding-top: 28px;
   background-color: #2a2c2f;
-  overflow: hidden;
-}
-
-@media screen and (max-width: 320px) {
-  .root {
-    max-width: 100%;
-    padding-top: 16px;
-    background-color: #2a2c2f;
-    overflow: hidden;
-  }
+  font-family: "Inter", "Arial", sans-serif;
+  font-style: normal;
+  color: #ffffff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
