--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -15,3 +15,12 @@
     line-height: calc(35px + 41 * ((100vw - 320px) / (768 - 320)));
   }
 }
+
+@media screen and (max-width: 320px) {
+  .cover__title {
+    max-width: 255px;
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 0 16px;
+  }
+}
