--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,4 +1,5 @@
 .footer__link {
+  max-width: fit-content;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
@@ -12,9 +13,7 @@
 
 @media screen and (max-width: 510px) {
   .footer__link {
-    font-weight: 400;
     font-size: 24px;
-    line-height: 42px;
-    color: #ffffff;
+    line-height: 24px;
   }
 }
