--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -13,3 +13,9 @@
     line-height: calc(44px + 56 * ((100vw - 320px) / (768 - 320)));
   }
 }
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    margin: 0 auto 16px;
+  }
+}
