--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,6 +1,5 @@
 .place__link {
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
+  max-width: fit-content;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
