--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,4 +1,5 @@
 .place__title {
+  max-width: 330px;
   font-size: 72px;
   font-weight: 900;
   line-height: 76px;
@@ -7,8 +8,15 @@
 
 @media screen and (max-width: 1024px) {
   .place__title {
-    font-size: calc(32px + 40 * ((100vw - 320px) / (1024 - 320)));
-    line-height: calc(35px + 41 * ((100vw - 320px) / (1024 - 320)));
+    font-size: 72px;
+    line-height: 76px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
   }
 }
 
