--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,10 @@
 .place {
   max-width: 984px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(40%, max-content));
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(min-content, 460px) minmax(min-content, 484px)
+  );
   gap: 48px 40px;
   margin-bottom: 80px;
 }
@@ -12,18 +15,31 @@
 
 @media screen and (max-width: 1024px) {
   .place {
+    grid-template-columns: repeat(
+      auto-fill,
+      minmax(min-content, 440px) minmax(min-content, 456px)
+    );
     gap: 48px 30px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place {
-    grid-template-columns: repeat(auto-fit, minmax(288px, max-content));
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(min-content, 340px) minmax(min-content, 352px)
+    );
     gap: 48px 28px;
   }
 
   .place:last-child {
     margin-bottom: 90px;
+  }
+}
+
+@media screen and (max-width: 626px) {
+  .place {
+    grid-template-columns: repeat(auto-fit, minmax(320px, max-content));
   }
 }
 
