--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -9,6 +9,12 @@
   margin: 0;
 }
 
+@media screen and (max-width: 1024px) {
+  .place__text {
+    font-size: calc(16px + 2 * ((100vw - 768px) / (1024 - 768)));
+  }
+}
+
 @media screen and (max-width: 768px) {
   .place__text {
     font-size: 16px;
